Mise à jour pour serveur distant

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Db": "Server=localhost\\SQLEXPRESS;Database=schedule;Integrated Security=SSPI;TrustServerCertificate=True"
+    "Db": "Server=51.255.169.65,1433;Database=schedule;User id=SA;Password=MyPass@word;TrustServerCertificate=True"
   }
 }
