--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7178;http://localhost:5223",
+      "applicationUrl": "https://localhost:7178;http://51.255.169.65:5223",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
