Connexion avec Kotlin

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Db": "Server=51.255.169.65,1433;Database=schedule;User id=SA;Password=MyPass@word;TrustServerCertificate=True"
+  }
 }
